@@ -250,7 +250,7 @@ namespace Orthanc
       // See also: http://support.dcmtk.org/wiki/dcmtk/howto/accessing-compressed-data
 
       DicomMap m;
-      FromDcmtkBridge::ExtractDicomSummary(m, dataset);
+      FromDcmtkBridge::ExtractDicomSummary(m, dataset, 0 /* don't truncate tags */);
 
       /**
        * Create an accessor to the raw values of the DICOM image.
@@ -322,7 +322,7 @@ namespace Orthanc
                                                 bool ignorePhotometricInterpretation)
   {
     DicomMap m;
-    FromDcmtkBridge::ExtractDicomSummary(m, dataset);
+    FromDcmtkBridge::ExtractDicomSummary(m, dataset, 0 /* don't truncate tags */);
 
     DicomImageInformation info(m);
     PixelFormat format;
@@ -602,7 +602,7 @@ namespace Orthanc
     }
 
     DicomMap m;
-    FromDcmtkBridge::ExtractDicomSummary(m, dataset);
+    FromDcmtkBridge::ExtractDicomSummary(m, dataset, 0 /* don't truncate tags */);
     DicomImageInformation info(m);
 
     std::unique_ptr<ImageAccessor> target(CreateImage(dataset, true));
